generate ascii network-2

--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -18,7 +18,7 @@ jobs:
           run: grep -i "dragon" dragon.txt
 
         - name: Read File
-          run: cat deagon.txt
+          run: cat dragon.txt
 
         - name: List Repo files
           run: ls -ltra
